# machine_learning_hse_course

./: .gitignore
executor/: CMakeLists.txt  executor.cpp  executor.h  executor_config.h  launcher.cpp
filter/: CMakeLists.txt  filter.h  launcher.cpp
homeworks/01/: homework-practice-01.ipynb  random_data.csv  sol.cpp
homeworks/02/: functions.py  functions_vectorized.py  homework-practice-02.ipynb
homeworks/03/: homework-practice-03.ipynb  huber_reg.py
homeworks/04/: homework-practice-04.ipynb
homeworks/05/: homework-practice-05-KazakovEvgenii.ipynb  hw5code.py  kek.ipynb  save
homeworks/06/: homework-practice-06-KazakovEvgenii.ipynb
kaggle/house_pricing/base/: common.py
kaggle/house_pricing/data_provider/: data_provider.py  research.ipynb
kaggle/house_pricing/launcher/: launcher.py  result.csv
kaggle/house_pricing/models/: catboost_regression.py  lasso_linear_regression.py  predictor.py  research.ipynb  result.csv  ridge_linear_regression.py  simple_linear_regression.py
kaggle/house_pricing/research/: visualization.ipynb
kaggle/sentiment_analysis/: .gitignore
kaggle/sentiment_analysis/base/: common.py
kaggle/sentiment_analysis/data_processor/: config_example.json
kaggle/sentiment_analysis/data_processor_manager/: data_processor.py  data_processor_manager.py
kaggle/sentiment_analysis/data_provider/: config_example.json  data_provider.py  example.py
kaggle/sentiment_analysis/data_reader/: config_example.json  data_reader.py  example.py
kaggle/the_new_order/: .gitignore  input
seminars/01_intro/: sem01-intro.ipynb
(+57 files in other folders)
